perf(embeddings): index asynchronously and reuse vectors